<resources>
    <string name="app_name">ImmersiveSlidingMenu</string>
    <string name="user_changepwd">修改密码</string>
    <string name="cancel_account">退出登陆</string>
    <string name="btn_setting">设置</string>
    <string name="text_username">周杰伦</string>
    <string name="text_number">80473333</string>
    <string name="text_phone">13726900000</string>
    <string name="text_main_menu">主菜单</string>
    <string name="text_left_menu">-->右滑侧栏</string>
</resources>
