<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_left_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#104f73"
    android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:layout_marginTop="50dp">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="15dp"
                    android:layout_alignParentLeft="true"
                    android:src="@mipmap/personal_default"/>
                <ImageView
                    android:id="@+id/img_qcode"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:padding="10dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="7.5dp"
                    android:src="@mipmap/qcode_left_nav"/>
        </RelativeLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="17.5dp"
                    android:src="@mipmap/user_left_nav"/>
                <TextView
                    android:id="@+id/txt_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/text_username"
                    android:textSize="14sp"
                    android:textColor="#fff"
                    />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="17.5dp"
                    android:src="@mipmap/id_left_nav"/>
                <TextView
                    android:id="@+id/txt_userid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/text_number"
                    android:textSize="14sp"
                    android:textColor="#fff"
                    />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="25dp"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="17.5dp"
                    android:src="@mipmap/phone_left_nav"/>
                <TextView
                    android:id="@+id/txt_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/text_phone"
                    android:textSize="14sp"
                    android:textColor="#fff"
                    />
        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#0d4362"
            android:orientation="vertical" >
                <LinearLayout
                    android:id="@+id/layout_empty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                        <LinearLayout
                            android:id="@+id/layout_changepwd"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                                <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="15dp"
                                        android:layout_marginLeft="17.5dp"
                                        android:text="@string/user_changepwd"
                                        android:textColor="#7ea1b4"
                                        android:textSize="14sp"/>
                                <View
                                        android:id="@+id/view_line"
                                        android:layout_width="match_parent"
                                        android:layout_marginTop="10dp"
                                        android:layout_marginLeft="17.5dp"
                                        android:layout_marginRight="17.5dp"
                                        android:layout_height="0.5dp"
                                        android:background="#fff"/>
                        </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="12dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:paddingBottom="20dp"
                    android:clickable="true"
                    android:orientation="horizontal">
                        <LinearLayout
                            android:id="@+id/layout_exit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:orientation="horizontal">
                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:src="@mipmap/exit_left_nav"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="5dp"
                                    android:textSize="14sp"
                                    android:text="@string/cancel_account"
                                    android:textColor="#fff"/>
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/layout_setting"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_gravity="center_vertical"
                            android:orientation="horizontal">
                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:src="@mipmap/settings_left_nav"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="5dp"
                                    android:textSize="14sp"
                                    android:text="@string/btn_setting"
                                    android:textColor="#fff"/>
                        </LinearLayout>

                </LinearLayout>


        </LinearLayout>




</LinearLayout>